<resources>
    <string name="app_name">StudyPlanner</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_def">The DPM App is a Prototype version of a degree planner only and
        NOT an official study plan. It is intended that students shall use this to get an
        understanding of the pathways offered and then discuss study plans with a Wintec
        representative. Pathways may change accordingly making older versions redundant – Wintec
        takes no responsibility of outdated pathways or information displayed on the app.</string>
    <string name="about_us">Degree Programe Mapper was developed for Wintec, by Catdog54.</string>
    <string name="member">Catdog54 Members:</string>
    <string name="members">Michael Aldous, Hayden Ferries, Corban Whiteman, David Taylor, Showan Simkhada.</string>
    <string name="specification">Specification: </string>
    <string name="specification_1">Platform: Android API version: 28</string>
    <string name="app_version">App Version: Meow.5</string>
    <string name="planner_instructions">Press down on a module for a couple seconds to alternate between "passed" and "active". \n
        White indicates active. \n
        Green indicates passed. \n
        Red indicates prerequisites not met.</string>
    <string name="about_page"> \n
        <b>About Us:</b>\n\n
        Degree Programme Mapper was developed for wintec, by Catdog54.\n\n
        <b>Catdog54 Members:</b>\n
        Michael Aldous\n
        David Taylor\n
        Hayden Ferries\n
        Corban Whiteman\n
        Showan Simkhada \n
    </string>

    <string name="about_page2">\n
        <b>Specification:</b>\n
        Platform: Android\n
        API Version: 5.0 \n
        APP Version: 1 \n
    </string>
</resources>
